修改了主页面和路由切换动效

--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>兰娘子</title>
 </head>
-<body>
-<div id="app">
+<body style="background-color:#fff; ">
+<div id="app" >
     <app></app>
 </div>
 </body>
